// Vitest Snapshot v1

exports[`integration > css > css/variables > should match snapshot 1`] = `
"/**
 * Do not edit directly
 * Generated on Thu, 01 Sep 2022 01:39:44 GMT
 */

:root {
  --breakpoint-xs: 304px;
  --breakpoint-sm: 768px;
  --breakpoint-md: calc(304px / 768px);
}
"
`;

exports[`integration > css > css/variables > with references > should match snapshot 1`] = `
"/**
 * Do not edit directly
 * Generated on Thu, 01 Sep 2022 01:39:44 GMT
 */

:root {
  --breakpoint-sm: 768px;
  --breakpoint-xs: 304px;
  --breakpoint-md: calc(var(--breakpoint-xs) / var(--breakpoint-sm));
}
"
`;

exports[`integration > css > css/variables > with selector > should match snapshot 1`] = `
"/**
 * Do not edit directly
 * Generated on Thu, 01 Sep 2022 01:39:44 GMT
 */

.test {
  --breakpoint-xs: 304px;
  --breakpoint-sm: 768px;
  --breakpoint-md: calc(304px / 768px);
}
"
`;
